--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "luxon": "^3.4.4",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.2",
